[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
    "setuptools-git-versioning",
    "wheel"
]

[tool.setuptools-git-versioning]
enabled = true

[project]
name = "media-management-scripts"
description = "Media Management Scripts"
dynamic = ["version"]
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = "Ray Douglass" },
]
license = { text = "Apache 2.0" }
requires-python = ">=3.9"
dependencies = [
  "requests",
  "pyOpenSSL",
  "texttable",
  "tmdbsimple",
  "argcomplete",
  "tempita",
  "pysrt",
  "pythondialog",
  "pyyaml",
  "pyparsing",
  "pycaption",
  "python-magic",
]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/raydouglass/media_management_scripts"

[tool.setuptools]
license-files = ["LICENSE"]
